# abalone

./: README.md  trainer.glade  trainer.py
docker/: Dockerfile.finetune  Dockerfile.finetune.gpu
ibus-plugin/: Makefile.am  configure.ac
ibus-plugin/engine/: Makefile.am  abalone.xml.in.in  engine.py  ibus-engine-abalone.in  main.py
ibus-plugin/icons/: Makefile.am
trainer/: requirements.txt  trainer.glade  trainer.py
